:spearkles: modify footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,11 @@
     background-color: rgb(178, 10, 10);
     color: white;
 }
+
+/* FOOTER */
+
+#footer {
+    background-color: black;
+    color: white;
+    
+}
